IVYPORTAL-5818 Customize Priority State Colour for Task State: + Fixed wrong color

--- a/AxonIvyPortal/PortalStyle/webContent/resources/less/variables.less
+++ b/AxonIvyPortal/PortalStyle/webContent/resources/less/variables.less
@@ -11,7 +11,7 @@
 @task-priority-high-color: #ffc0c0;
 @task-priority-exception-color: #ff5a5a;
 
-@task-state-open-color: #ff5a5a;
+@task-state-open-color: #078cff;
 @task-state-in-progress-color: #4eb41c;
 @task-state-done-color: #4eb41c;
 @task-state-zombie-destroyed-color: #ff6464;
